--- a/templates/stallmenu.html
+++ b/templates/stallmenu.html
@@ -21,7 +21,7 @@
 
 <header>
 
-    <a href="#" class="logo"><i class="fas fa-utensils" style="padding-right: 0.5rem;"></i>Ande Canteen</a>
+    <a href="#" class="logo"><i class="fas fa-utensils" style="padding-right: 0.5rem;"></i>Raffles Canteen</a>
 
     <nav class="navbar">
         <a class="active" href="#home">stalls</a>
