--- a/templates/ForgetPass.html
+++ b/templates/ForgetPass.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>AndersonOrders - Ordering Made Easier</title>
+	<title>RafflesOrders - Ordering Made Easier</title>
 	<link rel="stylesheet" type="text/css" href="../static/css/login.css">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
     <link rel="icon" href="../static/assets/avatar2.svg">
