--- a/templates/SignUp.html
+++ b/templates/SignUp.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>AndersonOrders - Ordering Made Easier</title>
+	<title>RafflesOrders - Ordering Made Easier</title>
 	<link rel="stylesheet" type="text/css" href="../static/css/login.css">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/a81368914c.js"></script>
